--- a/main.html
+++ b/main.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <!-- the entire body must be written by student -->
     <table style="width: 100%">
-    <caption>
-      Monthly savings
-    </caption>
-    <tr>
-      <th>Item</th>
-      <th>Prices in Rs</th>
-    </tr>
-    <tr>
-      <td class="item">Tea</td>
-      <td class="price">50</td>
-    </tr>
-    <tr>
-      <td class="item">Coffee</td>
-      <td class="price">70</td>
-    </tr>
-    <tr>
-      <td class="item">Biscuits</td>
-      <td class="price">100</td>
-    </tr>
-    <tr>
-      <td class="item">Rice</td>
-      <td class="price">130</td>
-    </tr>
-    <tr>
-      <td class="item">Milk</td>
-      <td class="price">50</td>
-    </tr>
-  </table>
-    <script type="text/javascript" src="./script.js">
-</script>
+        <caption>Monthly savings</caption>
+        <tr>
+            <th>Item</th>
+            <th>Prices in Rs</th>
+        </tr>
+        <tr>
+            <td class="item">Tea</td>
+            <td class="price" contenteditable="true">50</td>
+        </tr>
+        <tr>
+            <td class="item">Coffee</td>
+            <td class="price" contenteditable="true">70</td>
+        </tr>
+        <tr>
+            <td class="item">Biscuits</td>
+            <td class="price" contenteditable="true">100</td>
+        </tr>
+        <tr>
+            <td class="item">Rice</td>
+            <td class="price" contenteditable="true">130</td>
+        </tr>
+        <tr>
+            <td class="item">Milk</td>
+            <td class="price" contenteditable="true">50</td>
+        </tr>
+    </table>
 
+    <!-- Button to calculate total price -->
+    <button id="calculate">Get Total Price</button>
+
+    <!-- This element will display the total price -->
+    <p id="ans" style="font-weight: bold;"></p>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
