--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
         </tr>
     </table>
 
-    <!-- Button to calculate total price -->
-    <button id="calculate">Get Total Price</button>
+    <!-- Dynamically created Button to calculate total price -->
+    <button id="getSumBtn">Get Total Price</button>
 
     <!-- This element will display the total price -->
     <p id="ans" style="font-weight: bold;"></p>
